--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -729,7 +729,7 @@
       "options": [
         {
           "value": "image",
-          "label": "t:options.image"
+          "label": "t:options.image",
         },
         {
           "value": "video",
@@ -742,6 +742,7 @@
       "type": "image_picker",
       "id": "image_1",
       "label": "t:settings.image",
+      "info": "Image Aspect Ratio 5:2 — [<a href='https://www.google.in' target='_blank'>Learn more</a>]",
       "visible_if": "{{ section.settings.media_type_1 == 'image' }}"
     },
     {
