--- a/snippets/header-row.liquid
+++ b/snippets/header-row.liquid
@@ -94,16 +94,117 @@
                       ref="searchInput"
                       on:input="/search"
                       on:keydown="/onSearchKeyDown"
+                      style="padding-bottom: 10px;"
                     >
                     <input name="options[prefix]" type="hidden" value="last">
-                    <span class="svg-wrapper predictive-search__icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none">
-                        <circle cx="9" cy="9" r="4.75" stroke="currentColor" stroke-width="var(--icon-stroke-width)"></circle><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="var(--icon-stroke-width)" d="m12.5 12.5 3.25 3.25"></path>
-                      </svg>
-                    </span>
+                    <button
+                      type="submit"
+                      aria-label="Submit Search"
+                      style="border:none; background:none; padding:0; margin:0; cursor:pointer;"
+                    >
+                      <span class="svg-wrapper predictive-search__icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none">
+                          <circle cx="9" cy="9" r="4.75" stroke="currentColor" stroke-width="var(--icon-stroke-width)"></circle><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="var(--icon-stroke-width)" d="m12.5 12.5 3.25 3.25"></path>
+                        </svg>
+                      </span>
+                    </button>
                   </div>
                 </div>
               </form>
+
+              <script>
+                (function () {
+                  if (typeof window.requestIdleCallback === 'function') {
+                    window.requestIdleCallback(initAnimation, { timeout: 2000 });
+                  } else {
+                    setTimeout(initAnimation, 100);
+                  }
+
+                  function initAnimation() {
+                    const texts = [
+                      'Search Gifts for your dearest…',
+                      'Search for Mangalsutra…',
+                      'Search for Necklaces…',
+                    ];
+                    const input = document.querySelector('#cmdk-input');
+                    if (!input) return;
+
+                    const animationWorker = function (input, texts) {
+                      this.input = input;
+                      this.defaultPlaceholder = this.input.getAttribute('placeholder');
+                      this.texts = texts;
+                      this.curTextNum = 0;
+                      this.curPlaceholder = '';
+                      this.blinkCounter = 0;
+                      this.animationFrameId = 0;
+                      this.animationActive = false;
+                      this.input.setAttribute('placeholder', this.curPlaceholder);
+
+                      this.switch = (timeout) => {
+                        this.input.classList.add('imitatefocus');
+                        setTimeout(() => {
+                          this.input.classList.remove('imitatefocus');
+                          if (this.curTextNum == 0) this.input.setAttribute('placeholder', this.defaultPlaceholder);
+                          else this.input.setAttribute('placeholder', this.curPlaceholder);
+
+                          setTimeout(() => {
+                            this.input.setAttribute('placeholder', this.curPlaceholder);
+                            if (this.animationActive)
+                              this.animationFrameId = window.requestAnimationFrame(this.animate);
+                          }, timeout);
+                        }, timeout);
+                      };
+
+                      this.animate = () => {
+                        if (!this.animationActive) return;
+                        let curPlaceholderFullText = this.texts[this.curTextNum];
+                        let timeout = 900;
+                        if (this.curPlaceholder == curPlaceholderFullText + '|' && this.blinkCounter == 3) {
+                          this.blinkCounter = 0;
+                          this.curTextNum = this.curTextNum >= this.texts.length - 1 ? 0 : this.curTextNum + 1;
+                          this.curPlaceholder = '|';
+                          this.switch(3000);
+                          return;
+                        } else if (this.curPlaceholder == curPlaceholderFullText + '|' && this.blinkCounter < 3) {
+                          this.curPlaceholder = curPlaceholderFullText;
+                          this.blinkCounter++;
+                        } else if (this.curPlaceholder == curPlaceholderFullText && this.blinkCounter < 3) {
+                          this.curPlaceholder = this.curPlaceholder + '|';
+                        } else {
+                          this.curPlaceholder =
+                            curPlaceholderFullText
+                              .split('')
+                              .slice(0, this.curPlaceholder.length + 1)
+                              .join('') + '|';
+                          timeout = 60;
+                        }
+                        this.input.setAttribute('placeholder', this.curPlaceholder);
+                        setTimeout(() => {
+                          if (this.animationActive) this.animationFrameId = window.requestAnimationFrame(this.animate);
+                        }, timeout);
+                      };
+
+                      this.stop = () => {
+                        this.animationActive = false;
+                        window.cancelAnimationFrame(this.animationFrameId);
+                      };
+
+                      this.start = () => {
+                        this.animationActive = true;
+                        this.animationFrameId = window.requestAnimationFrame(this.animate);
+                        return this;
+                      };
+                    };
+
+                    let aw = new animationWorker(input, texts).start();
+                    input.addEventListener('focus', (e) => aw.stop());
+                    input.addEventListener('blur', (e) => {
+                      aw = new animationWorker(input, texts);
+                      if (e.target.value == '') setTimeout(aw.start, 2000);
+                    });
+                  }
+                })();
+              </script>
 
             {% when 'mobile_search' %}
               {{ mobile_search }}
